# Michelansciilo

./: .clang-format  CMakeLists.txt
include/michelansciilo/: CMakeLists.txt  Drawer.hpp  RawCanvas.hpp  Settings.hpp  SpecialDrawer.hpp  TinyStructs.hpp
src/: CMakeLists.txt  Drawer.cpp  RawCanvas.cpp  Settings.cpp  SpecialDrawer.cpp
